restructered and fixed some tests
