# service/src/main/java/dk/kvalitetsit/hjemmebehandling/controller/CarePlanController.java
@@ -6,6 +6,7 @@ import dk.kvalitetsit.hjemmebehandling.controller.exception.ResourceNotFoundExce
 import dk.kvalitetsit.hjemmebehandling.controller.http.LocationHeaderBuilder;
 import dk.kvalitetsit.hjemmebehandling.model.*;
 import dk.kvalitetsit.hjemmebehandling.model.constants.errors.ErrorDetails;
+import dk.kvalitetsit.hjemmebehandling.model.QualifiedId;
 import dk.kvalitetsit.hjemmebehandling.service.CarePlanService;
 import dk.kvalitetsit.hjemmebehandling.service.PlanDefinitionService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
@@ -70,7 +71,7 @@ public class CarePlanController extends BaseController implements CarePlanApi {
                 request.getCarePlan().getQuestionnaires().forEach(q -> q.getFrequency().get().setTimeOfDay(Optional.of(defaultDeadlineTime.getValue())));
             }
 
-            CarePlanModel carePlan = dtoMapper.mapCarePlanDto(request.getCarePlan());
+            CarePlanModel carePlan = dtoMapper.mapCarePlan(request.getCarePlan());
 
             carePlanId = carePlanService.createCarePlan(carePlan);
 
@@ -93,7 +94,7 @@ public class CarePlanController extends BaseController implements CarePlanApi {
                 throw new ResourceNotFoundException(String.format("CarePlan with id %s not found.", id), ErrorDetails.CAREPLAN_DOES_NOT_EXIST);
             }
             auditLoggingService.log("GET /v1/careplan/" + id, carePlan.get().patient());
-            return ResponseEntity.ok(dtoMapper.mapCarePlanModel(carePlan.get()));
+            return ResponseEntity.ok(dtoMapper.mapCarePlan(carePlan.get()));
         } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not update questionnaire response", e);
             throw toStatusCodeException(e);
@@ -101,14 +102,10 @@ public class CarePlanController extends BaseController implements CarePlanApi {
     }
 
     @Override
-    public ResponseEntity<List<PlanDefinitionDto>> getPlanDefinitions1(Optional<List<StatusDto>> statusesToInclude) {
+    public ResponseEntity<List<PlanDefinitionDto>> getPlanDefinitions1(List<StatusDto> statusesToInclude) {
         try {
-            if (statusesToInclude.isPresent() && statusesToInclude.get().isEmpty()) {
-                var details = ErrorDetails.PARAMETERS_INCOMPLETE;
-                details.setDetails("Statusliste blev sendt med, men indeholder ingen elementer");
-                throw new BadRequestException(details);
-            }
-            List<PlanDefinitionModel> planDefinitions = planDefinitionService.getPlanDefinitions(statusesToInclude.map(x -> x.stream().map(dtoMapper::mapStatus).toList()).orElse(List.of()));
+
+            List<PlanDefinitionModel> planDefinitions = planDefinitionService.getPlanDefinitions(statusesToInclude.stream().map(dtoMapper::mapStatus).toList());
 
             var response = planDefinitions.stream()
                     .map(dtoMapper::mapPlanDefinitionModel)
@@ -118,7 +115,7 @@ public class CarePlanController extends BaseController implements CarePlanApi {
             // todo: 'Optional.get()' without 'isPresent()' check
             return ResponseEntity.ok(response);
         } catch (ServiceException | AccessValidationException e) {
-            logger.error("Could not look up plandefinitions", e);
+            logger.error("Could not look up planDefinitions", e);
             throw toStatusCodeException(e);
         }
     }
@@ -139,7 +136,7 @@ public class CarePlanController extends BaseController implements CarePlanApi {
     }
 
     @Override
-    public ResponseEntity<Void> patchCarePlan(String id, UpdateCareplanRequest request) {
+    public ResponseEntity<Void> patchCarePlan(String id, UpdateCarePlanRequest request) {
         if (request.getPlanDefinitionIds() == null || request.getQuestionnaires() == null) {
             throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
         }
@@ -177,28 +174,28 @@ public class CarePlanController extends BaseController implements CarePlanApi {
     }
 
     @Override
-    public ResponseEntity<List<CarePlanDto>> searchCarePlans(Optional<String> cpr, Optional<Boolean> onlyUnsatisfiedSchedules, Optional<Boolean> onlyActiveCareplans, Optional<Integer> pageNumber, Optional<Integer> pageSize) {
+    public ResponseEntity<List<CarePlanDto>> searchCarePlans(Optional<String> cpr, Optional<Boolean> onlyUnsatisfiedSchedules, Optional<Boolean> onlyActiveCarePlans, Optional<Integer> pageNumber, Optional<Integer> pageSize) {
         try {
             List<CarePlanModel> carePlans;
 
             if (pageNumber.isPresent() && pageSize.isPresent()) {
-                Pagination pagination = new Pagination(pageNumber.get(), pageSize.get());
+                Pagination pagination = new Pagination(pageNumber, pageSize);
 
                 if (cpr.isPresent()) {
-                    carePlans = carePlanService.getCarePlansWithFilters(new CPR(cpr.get()), onlyActiveCareplans.orElse(false), onlyUnsatisfiedSchedules.orElse(false), pagination);
+                    carePlans = carePlanService.getCarePlansWithFilters(new CPR(cpr.get()), onlyActiveCarePlans.orElse(false), onlyUnsatisfiedSchedules.orElse(false), pagination);
                 } else {
-                    carePlans = carePlanService.getCarePlansWithFilters(onlyActiveCareplans.orElse(false), onlyUnsatisfiedSchedules.orElse(false), pagination);
+                    carePlans = carePlanService.getCarePlansWithFilters(onlyActiveCarePlans.orElse(false), onlyUnsatisfiedSchedules.orElse(false), pagination);
                 }
 
             } else {
                 if (cpr.isPresent()) {
-                    carePlans = carePlanService.getCarePlansWithFilters(new CPR(cpr.get()), onlyActiveCareplans.orElse(false), onlyUnsatisfiedSchedules.orElse(false));
+                    carePlans = carePlanService.getCarePlansWithFilters(new CPR(cpr.get()), onlyActiveCarePlans.orElse(false), onlyUnsatisfiedSchedules.orElse(false));
                 } else {
-                    carePlans = carePlanService.getCarePlansWithFilters(onlyActiveCareplans.orElse(false), onlyUnsatisfiedSchedules.orElse(false));
+                    carePlans = carePlanService.getCarePlansWithFilters(onlyActiveCarePlans.orElse(false), onlyUnsatisfiedSchedules.orElse(false));
                 }
             }
             auditLoggingService.log("GET /v1/careplan", carePlans.stream().map(CarePlanModel::patient).toList());
-            return ResponseEntity.ok(carePlans.stream().map(dtoMapper::mapCarePlanModel).toList());
+            return ResponseEntity.ok(carePlans.stream().map(dtoMapper::mapCarePlan).toList());
         } catch (ServiceException | AccessValidationException e) {
             logger.error("Could not look up careplans by cpr", e);
             throw toStatusCodeException(e);
